fixed search bar on mobile devices

--- a/src/components/search-bar/search-bar.style.css
+++ b/src/components/search-bar/search-bar.style.css
@@ -56,6 +56,6 @@
       padding: 5px;
    }
    .input-field {
-      font-size: 14px;
+      font-size: 12px;
    }
 }
