--- a/src/pages/home-page/home-style.css
+++ b/src/pages/home-page/home-style.css
@@ -28,3 +28,9 @@
   overflow-y: scroll;
   justify-content: flex-end;
 }
+
+@media screen and (max-width: 320px) {
+  .pokemons-wrapper{
+    overflow-x: hidden;
+  }
+}
